// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Neuron should activate 1`] = `
Array [
  -0.5000000000000003,
  -0.2886751345948127,
]
`;

exports[`Neuron should expose internals 1`] = `
Object {
  "connections": 5,
  "wv": Array [
    Array [
      1,
      0,
    ],
    Array [
      0.30901699437494745,
      0.9510565162951535,
    ],
    Array [
      -0.8090169943749473,
      0.5877852522924732,
    ],
    Array [
      -0.8090169943749475,
      -0.587785252292473,
    ],
    Array [
      0.30901699437494723,
      -0.9510565162951536,
    ],
  ],
}
`;

exports[`TrackNeuronActivationDomain should calculate min and max 1`] = `
Array [
  Array [
    -0.5000000000000003,
    -0.2886751345948127,
  ],
  Array [
    0.5,
    0.288675134594813,
  ],
]
`;

exports[`apply should scale the input by the weights 1`] = `
Array [
  Array [
    0.3,
    0.6,
  ],
  Array [
    2.0999999999999996,
    2.8,
  ],
]
`;
